most of the work

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div id="main" data-scroll-container>
       <div id="page1" data-scroll>
-        <h1>
+        <h1 data-scroll data-scroll-speed="-2">
           <span>CREATIVE <em> studio</em> DEDICATED <em>to</em> CULTURAL</span>
           <span>
             ADVANCEMENT <em> through We are a</em> STRATEGY
@@ -48,7 +48,204 @@
           >
         </h1>
       </div>
-      <div id="page2" data-scroll=""></div>
+
+      <div id="page2" data-scroll="">
+        <div
+          class="ele"
+          data-img="https://i.pinimg.com/736x/56/b9/7a/56b97a178021083cdb612959bf02083f.jpg"
+        >
+          <div class="moving">
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+          </div>
+
+          <div id="yellow"></div>
+          <h1 id="heading">Converse</h1>
+        </div>
+
+        <div
+          class="ele"
+          data-img="https://i.pinimg.com/736x/0f/69/39/0f6939ca4e265db250f2598a4679f4b9.jpg"
+        >
+          <div class="moving">
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+          </div>
+
+          <div id="yellow"></div>
+          <h1 id="heading">Nike fel</h1>
+        </div>
+
+        <div
+          class="ele"
+          data-img="https://i.pinimg.com/736x/5e/0f/97/5e0f97e7e848a1526961d63dcb94a73f.jpg"
+        >
+          <div class="moving">
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+          </div>
+
+          <div id="yellow"></div>
+          <h1 id="heading">mikeral</h1>
+        </div>
+
+        <div
+          class="ele"
+          data-img="https://i.pinimg.com/736x/24/8a/4d/248a4d6a6b7f3dc528fce3a9acda19a9.jpg"
+        >
+          <div class="moving">
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+          </div>
+
+          <div id="yellow"></div>
+          <h1 id="heading">futurevvorld</h1>
+        </div>
+
+        <div
+          class="ele"
+          data-img="https://i.pinimg.com/736x/7c/0b/05/7c0b0562db0500d5ee5e9e1d8114d19c.jpg"
+        >
+          <div class="moving">
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+            <div class="moving_in">
+              <h1>creative direction</h1>
+              <h1>branding & identity</h1>
+              <h1>digital design</h1>
+              <h1>startegy</h1>
+              <h1>motion & animation</h1>
+            </div>
+          </div>
+
+          <div id="yellow"></div>
+          <h1 id="heading">beyonce</h1>
+        </div>
+      </div>
+
       <div id="page3" data-scroll=""></div>
     </div>
 
