--- a/index.html
+++ b/index.html
@@ -246,7 +246,19 @@
         </div>
       </div>
 
-      <div id="page3" data-scroll=""></div>
+      <div id="page3" data-scroll="">
+        <div id="img_container">
+          <div id="image">
+            <img
+              src="https://i.pinimg.com/736x/ec/a7/34/eca7345377a698dc2ddfae2b06593aab.jpg"
+              alt=""
+            />
+            <div id="overlay">
+              <h1>think good , get returns fine</h1>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
